
 - negative_bg (or set via set_negative_background()) can now be a
   fill.
   https://rt.cpan.org/Ticket/Display.html?id=59532

 - calculation of the zero position for horizontal charts was broken,
   this resulted charts with negative data values having the
   negative_bg color filled from the left side of the chart off the
   right side of the image.

Imager-Graph 0.09 - 05 Aug 2010
=================

Bug fixes:

 - refresh the t10_lin_fount test image

 - avoid use_automatic_axis() for the second area test, since systems
   without Chart::Math::Axis will produce a different image.

Imager-Graph 0.08 - 03 Aug 2010
=================

Now depends on Imager 0.75.

More cool changes from Patrick Michaud:

 - Area charts
   https://rt.cpan.org/Ticket/Display.html?id=7

Other changes:

 - horizonal_gridlines (vertical charts) and vertical_gridlines
   (horizontal charts) are now features and can be enabled like other
   features (or disabled)

 - hoisted the dashed-line drawing into Imager::Graph::_line() and
   added a _get_line() method to retrieve line style information.

 - features enabled earlier in the style list can now be disabled with
   a feature "no{stylename}" when features are supplied as an arrayref
   or scalar. eg. "nograph_outline".  If you supply features as a hashref
   you can disable a feature with:
     { stylename => 0 }

 - for vertical and horizontal charts, allow the outline of the graph
   area (graph_outline) to be disabled (with nograph_outline in
   features.) or styled (graph.outline)

 - for vertical and horizontal charts, allow the fill of the graph
   area to be controlled separately from the base bg (graph.fill)

 - tests

Bug fixes:

 - generate y-axis tic-label widths baed on the labels actually used.

 - make draw() idempotent for vertical charts

 - multiple calls to draw() no longer return the same image object

 - labels supplied to draw() are now used for vertical and horizontal
   charts
